--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -31,7 +31,6 @@ ChatScreen As screen:
         ZIndex: =1
 
         ctnHeaderDS_9 As groupContainer.horizontalAutoLayoutContainer:
-            AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =If(Parent.Height<Parent.Width,60,80)
@@ -51,7 +50,7 @@ ChatScreen As screen:
                 Width: =Parent.Height/2
                 X: =18
                 Y: =11
-                ZIndex: =5
+                ZIndex: =1
 
             imgSchindlerLogoDS_3 As image:
                 AlignInContainer: =AlignInContainer.Center
@@ -65,7 +64,7 @@ ChatScreen As screen:
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/10,Parent.Width/12)
                 X: =0.00
-                ZIndex: =6
+                ZIndex: =2
 
             iconBackCL_2 As icon.BackArrow:
                 AlignInContainer: =AlignInContainer.Center
@@ -82,7 +81,7 @@ ChatScreen As screen:
                 Width: =Parent.Height/2
                 X: =18
                 Y: =11
-                ZIndex: =7
+                ZIndex: =3
 
             lblHeaderDS_4 As label:
                 AlignInContainer: =AlignInContainer.Center
@@ -98,9 +97,30 @@ ChatScreen As screen:
                     =//21.36
                     If(Parent.Width<500,14,Parent.Width>500,20)
                 Text: ="Technician Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoDS_3.Width-IconMenuCS.Width-Button2_4.Width-60
+                Width: =Parent.Width-imgSchindlerLogoDS_3.Width-IconMenuCS.Width-Button2_4.Width-Image3_2.Width-50
                 X: =96.12
-                ZIndex: =8
+                ZIndex: =4
+
+            Image3_2 As image:
+                DisabledFill: =RGBA(255, 255, 255, 1)
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height
+                HoverFill: =Self.Fill
+                Image: ='refresh-1x'
+                OnSelect: |-
+                    =If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error),
+                    //Notify("Internet is connected",NotificationType.Success);
+                    Refresh(LeadChats));
+                PaddingBottom: =Parent.Height/3
+                PaddingLeft: =5
+                PaddingRight: =5
+                PaddingTop: =Parent.Height/3
+                PressedFill: =Self.Fill
+                Visible: =If(Connection.Connected,true,false)
+                Width: =50
+                X: =ctnYearToggleDS.X+ctnYearToggleDS.Width
+                Y: =Parent.Height/4
+                ZIndex: =5
 
             Button2_4 As button:
                 AlignInContainer: =AlignInContainer.Center
@@ -125,7 +145,7 @@ ChatScreen As screen:
                         Find(" ", User().FullName) + 1,
                         1)
                 Width: =If(Parent.Width<500,Parent.Height/1.8,Parent.Height/1.6)
-                ZIndex: =9
+                ZIndex: =6
 
         Container1_9 As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.Center
@@ -502,7 +522,9 @@ ChatScreen As screen:
         FontWeight: =FontWeight.Lighter
         OnTimerEnd: =//Refresh(Filter(LeadChats,LeadInformationLID.ID=VarLtdID));
         Repeat: =true
-        Start: =VarLeadMessages
+        Start: |-
+            =//VarLeadMessages
+            false
         Visible: =false
         X: =40
         Y: =40
