--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -119,7 +119,7 @@ DashboardScreen As screen:
                 PaddingTop: =Parent.Height/3
                 PressedFill: =Self.Fill
                 Visible: =If(Connection.Connected,true,false)
-                Width: =50
+                Width: =0
                 X: =ctnYearToggleDS.X+ctnYearToggleDS.Width
                 Y: =Parent.Height/4
                 ZIndex: =5
@@ -188,7 +188,9 @@ DashboardScreen As screen:
                 PaddingRight: =0
                 Size: =If(Parent.Width>500,16,Parent.Width<500,14,12)
                 Text: ="Time Span"
-                Width: =If(Parent.Width<500,Parent.Width/2.5,Parent.Width/3)
+                Width: |-
+                    =//If(Parent.Width<500,Parent.Width/2.5,Parent.Width/3)
+                    Parent.Width-lblyearDS.Width-ctnYearToggleDS.Width-Image3.Width-20
                 X: =Parent.X
                 ZIndex: =4
 
@@ -241,6 +243,7 @@ DashboardScreen As screen:
                     FalseText: |-
                         =//LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On')) &"-"& Year(Now())
                         LookUp(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No',Year)
+                    FocusedBorderThickness: =0
                     Font: =Font.Arial
                     Height: =Parent.Height/3
                     OnCheck: |-
@@ -255,7 +258,6 @@ DashboardScreen As screen:
                         Set(cumulatively,false);
                     ShowLabel: =false
                     Size: =If(Parent.Width>500,18,Parent.Width<500,12,12)
-                    TextPosition: =TextPosition.Left
                     TrueFill: =RGBA(255, 0, 0, 1)
                     TrueText: =Min(GCTotalIncentives,Year)  & "-" & Max(GCTotalIncentives,Year)
                     Width: |-
@@ -265,9 +267,9 @@ DashboardScreen As screen:
                     ZIndex: =1
 
             Image3 As image:
-                DisabledFill: =RGBA(219, 219, 219, 1)
+                DisabledFill: =RGBA(255, 255, 255, 1)
                 Fill: =RGBA(255, 255, 255, 1)
-                Height: =50
+                Height: =Parent.Height
                 HoverFill: =Self.Fill
                 Image: ='refresh-1x'
                 OnSelect: |-
@@ -283,11 +285,14 @@ DashboardScreen As screen:
                      /*Set(VarCurrentYear,Text(Year(Today())));
                      Set(VarFirstYear, Text(Min(GCTotalIncentives,Year)));
                      Set(VarLastYear,Text( Max (GCTotalIncentives,Year)));*/
+                PaddingBottom: =10
+                PaddingTop: =10
                 PressedFill: =Self.Fill
-                Visible: =false
-                Width: =50
+                Width: =Parent.Width/10
                 X: =ctnYearToggleDS.X+ctnYearToggleDS.Width
-                Y: =Parent.Height/4
+                Y: |-
+                    =//Parent.Height/4
+                    0
                 ZIndex: =8
 
         ctnMiddleDS As groupContainer.verticalAutoLayoutContainer:
