--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -572,7 +572,13 @@ SubmittedLeadScreen As screen:
                     DisplayMode: =DisplayMode.View
                     Fill: =RGBA(255, 0, 0, 1)
                     Height: =13
-                    OnSelect: =Select(Parent)
+                    OnSelect: |
+                        =Navigate(ChatScreen);
+                        Set(VarLtdName,ThisItem.'BuildingName ');
+                        Set(VarLtdTrackingnumber,ThisItem.LeadTrackingNumber);
+                        Set(VarLtdCntNumber,ThisItem.'ContractNumber ');
+                        Set(VarLtdID,ThisItem.ID);
+                        Set(VarLeadstatus,ThisItem.LeadStatus);
                     Visible: =If(CountRows(Filter(LeadChats,LeadInformationLID.ID =ThisItem.ID && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus=Header))=0,false,true)
                     Width: =13
                     X: =iconmsgSLS.X+iconmsgSLS.Width/1.2
