--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -27,6 +27,7 @@ ChatScreen As screen:
         LayoutMode: =LayoutMode.Auto
         LayoutOverflowY: =LayoutOverflow.Scroll
         PaddingLeft: =10
+        PaddingRight: =10
         Width: =Parent.Width
         ZIndex: =1
 
@@ -72,8 +73,8 @@ ChatScreen As screen:
                 Height: =Parent.Height/2
                 Icon: =Icon.ChevronLeft
                 OnSelect: |
-                    =/*UpdateContext({locInfoExpanded:true});
-                    If(VarLeadstatus="Quoted" ||VarLeadstatus="Sold" ,Navigate(QuotedSOldLeads);,VarLeadstatus="Rejected",Navigate(RejectedLeads);,Navigate(SubmittedLeadScreen));*/
+                    =UpdateContext({locInfoExpanded:true});
+                    /*If(VarLeadstatus="Quoted" ||VarLeadstatus="Sold" ,Navigate(QuotedSOldLeads);,VarLeadstatus="Rejected",Navigate(RejectedLeads);,Navigate(SubmittedLeadScreen));*/
                     Back();
                     Set(VarLeadMessages,false);
                     UpdateContext({startTimerCS:false});Refresh(LeadChats);
