--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -151,6 +151,7 @@ DashboardScreen As screen:
                 ZIndex: =6
 
         ctnUserNameDS As groupContainer.manualLayoutContainer:
+            Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |
                 =//Parent.Height/14
