--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -106,6 +106,7 @@ CreatLeadScreen As screen:
 
         ctnUserHeaderCL As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
                 =//Parent.Height/14
