--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -168,11 +168,16 @@ LeadSummaryScreen As screen:
                     FillPortions: =0
                     Height: |-
                         =//ContractNumberLSS.Height+BuildingNameLSS.Height+ZipCodeLSS.Height+AddressLSS.Height+UnitCountLSS.Height+UnitDescriptionLSS.Height+ScopeLSS.Height+ScopeOfWorkLSS.Height+ManuallyScopeOfWorkLSS.Height+EstimatedHoursLSS.Height+NotesLSS.Height+UnitDownLSS.Height+AdditionalExpensesRequiredLSS.Height+TravelRequiredLSS.Height+CommunicatedtoCustomerLSS.Height+CustomerContactLSS.Height+CustomerNameLSS.Height+TotalEstimatedExpenseLSS.Height+TotalEstimatedHoursofTravelLSS.Height+50
+                        If(ContractNumberLSS.Height + BuildingNameLSS.Height + ZipCodeLSS.Height + AddressLSS.Height + UnitCountLSS.Height + UnitDescriptionLSS.Height + ScopeLSS.Height + ScopeOfWorkLSS.Height + ManuallyScopeOfWorkLSS.Height + EstimatedHoursLSS.Height + NotesLSS.Height + UnitDownLSS.Height + AdditionalExpensesRequiredLSS.Height + 
+                            TravelRequiredLSS.Height + CommunicatedtoCustomerLSS.Height +
+                            If(CboxCCLSS.Value=true, CustomerNameLSS.Height+CustomerContactLSS.Height,5)+
+                              If(cboxTravelRequiredLSS.Value=true,TotalEstimatedHoursofTravelLSS.Height,5)+
+                              If(cboxAELSS.Value=true,TotalEstimatedExpenseLSS.Height,5)=0,1800,
                         ContractNumberLSS.Height + BuildingNameLSS.Height + ZipCodeLSS.Height + AddressLSS.Height + UnitCountLSS.Height + UnitDescriptionLSS.Height + ScopeLSS.Height + ScopeOfWorkLSS.Height + ManuallyScopeOfWorkLSS.Height + EstimatedHoursLSS.Height + NotesLSS.Height + UnitDownLSS.Height + AdditionalExpensesRequiredLSS.Height + 
                             TravelRequiredLSS.Height + CommunicatedtoCustomerLSS.Height +
                             If(CboxCCLSS.Value=true, CustomerNameLSS.Height+CustomerContactLSS.Height,5)+
                               If(cboxTravelRequiredLSS.Value=true,TotalEstimatedHoursofTravelLSS.Height,5)+
-                              If(cboxAELSS.Value=true,TotalEstimatedExpenseLSS.Height,5)+50
+                              If(cboxAELSS.Value=true,TotalEstimatedExpenseLSS.Height,5)+40)
                     Item: =VarFormMode
                     LayoutMinHeight: =250
                     LayoutMinWidth: =Parent.Width
@@ -1535,7 +1540,7 @@ LeadSummaryScreen As screen:
                             HoverColor: =RGBA(0, 0, 0, 1)
                             OnCheck: |-
                                 =Set(VarCommunicationSummary,CboxCCLSS.Value);
-                                Set(VarCommunication,true);Reset(IntxtCustomerNameLSS);Reset(IntxtContactNumberES_1);
+                                Set(VarCommunication,true);Reset(IntxtCustomerNameLSS);Reset(txtphonenumber_2);
                             OnUncheck: |-
                                 =Set(VarCommunicationSummary,CboxCCLSS.Value);
                                 Set(VarCommunication,false);Set(VarCustomerNameSummary,Blank());
@@ -1653,7 +1658,7 @@ LeadSummaryScreen As screen:
                         Height: =119
                         MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                         Required: =false
-                        Update: =IntxtContactNumberES_1.Text
+                        Update: =txtphonenumber_2.Text
                         Visible: =VarCommunication
                         Width: =Parent.Width
                         X: =0
@@ -1682,7 +1687,7 @@ LeadSummaryScreen As screen:
                             Visible: =Parent.DisplayMode=DisplayMode.Edit
                             Width: =Parent.Width - 60
                             X: =30
-                            Y: =IntxtContactNumberES_1.Y + IntxtContactNumberES_1.Height
+                            Y: =txtphonenumber_2.Y + txtphonenumber_2.Height
                             ZIndex: =2
 
                         StarVisibleContactNumberLSS As label:
@@ -1712,129 +1717,6 @@ LeadSummaryScreen As screen:
                             X: =70
                             Y: =20
                             ZIndex: =4
-
-                        IntxtContactNumberES_1 As text:
-                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            BorderThickness: =1
-                            Default: =IntxtContactNumberES.Text
-                            DelayOutput: =true
-                            DisabledBorderColor: =RGBA(202, 202, 202, 1)
-                            DisabledFill: =RGBA(0, 0, 0, 0)
-                            DisplayMode: =Parent.DisplayMode
-                            Font: =Font.Arial
-                            Format: =TextFormat.Number
-                            HintText: ="Customer Phone Number"
-                            HoverBorderColor: =Self.BorderColor
-                            HoverFill: =RGBA(255, 255, 255, 1)
-                            MaxLength: =10
-                            OnChange: |
-                                =If(Len(IntxtContactNumberES_1.Text)=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES_1.Text), "[$-en-US](###) ###-####"));Set (VarPhonenumbererrormessage, false);Set(varContactNumber, true), If(!IsBlank(IntxtContactNumberES_1.Text) && Len(IntxtContactNumberES_1.Text)<>10,Set(VarPhonenumbererrormessage, true); Set(varContactNumber, false)
-                                ));
-                            OnSelect: |-
-                                =If(varContactNumber=true,Set(varContactNumber,true));
-                                Set(varCustomerPhonenumber,true);
-                            PaddingLeft: =5
-                            RadiusBottomLeft: =0
-                            RadiusBottomRight: =0
-                            RadiusTopLeft: =0
-                            RadiusTopRight: =0
-                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Tooltip: ="Customer Phone Number"
-                            Visible: =false
-                            Width: =Parent.Width - 120
-                            X: =70
-                            Y: =lblContactES_1.Y + lblContactES_1.Height + 5
-                            ZIndex: =5
-
-                        lblContactNumber_1 As label:
-                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                            BorderThickness: =2
-                            DisabledBorderColor: =RGBA(202, 202, 202, 1)
-                            DisabledFill: =RGBA(255, 255, 255, 1)
-                            Fill: =RGBA(255, 255, 255, 1)
-                            Font: =Font.Arial
-                            Height: =IntxtContactNumberES_1.Height
-                            OnSelect: =Set(varContactNumber,false);
-                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: =VarformattedNumberSummary
-                            Visible: =false
-                            Width: =IntxtContactNumberES_1.Width
-                            X: =IntxtContactNumberES_1.X
-                            Y: =IntxtContactNumberES_1.Y
-                            ZIndex: =6
-
-                        tog_phonenumberlength_2 As slider:
-                            Default: =Len(txtphonenumber_2.Text)
-                            Max: =10
-                            OnChange: |
-                                =Set(
-                                    varPhoneNumber,
-                                    With(
-                                        {
-                                            // extracts all numbers from the phone number field
-                                            varTextNumbersOnly: Concat(
-                                                MatchAll(
-                                                    txtphonenumber_2.Text,
-                                                    Match.Digit
-                                                ),
-                                                FullMatch
-                                            ),
-                                            // builds a table with phone number format at every position
-                                            varPhoneNumberFormat: With(
-                                                {varTextPhoneNumberFormat: txtPhonenumberformat_2.Text},
-                                                With(
-                                                    {
-                                                        varTablePhoneNumberFormat: ForAll(
-                                                            Sequence(Len(varTextPhoneNumberFormat)),
-                                                            With(
-                                                                {
-                                                                    varNumberCurrentLength: Left(
-                                                                        varTextPhoneNumberFormat,
-                                                                        Value
-                                                                    )
-                                                                },
-                                                                {
-                                                                    NumberFormat: varNumberCurrentLength,
-                                                                    CountNumbers: CountRows(
-                                                                        MatchAll(
-                                                                            varNumberCurrentLength,
-                                                                            "0"
-                                                                        )
-                                                                    )
-                                                                }
-                                                            )
-                                                        )
-                                                    },
-                                                    ForAll(
-                                                        Sequence(
-                                                            Max(
-                                                                varTablePhoneNumberFormat,
-                                                                CountNumbers
-                                                            )
-                                                        ),
-                                                        LookUp(
-                                                            varTablePhoneNumberFormat,
-                                                            CountNumbers = Value
-                                                        )
-                                                    )
-                                                )
-                                            )
-                                        },
-                                        Text(
-                                            Value(varTextNumbersOnly),
-                                            LookUp(
-                                                varPhoneNumberFormat,
-                                                CountNumbers = Len(varTextNumbersOnly),
-                                                NumberFormat
-                                            )
-                                        )
-                                    )
-                                );
-                                Reset(txtphonenumber_2);
-                            Visible: =false
-                            X: =52
-                            Y: =104
-                            ZIndex: =7
 
                         txtPhonenumberformat_2 As text:
                             Default: ="(000)-000-0000"
